# RK3588_Drone_Track

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: yolo_ncnn.h
models/fz00_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
src/: main.cpp  test_rknn_image.cpp  yolo_ncnn.cpp
